--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 body{
-    background-color: black;
-}
+    background-color: black;  
+  }
 
 main::after{
     content: "";
@@ -78,13 +78,17 @@ main .personagem .imagem {
     width: 180px;
     align-items: center;
     gap: 10px;
+    background: linear-gradient(-90deg, rgba(0, 0, 0, 0.5) 30%, rgba(0, 0, 0, 0) 100%) no-repeat;
+    /*
     background-color: rgba(0,0,0,0.3);
+    */
 }
 
 .botoes .botao {
     border: none;
-    background: none;
+    background: #000;
     cursor: pointer;
+    border-radius: 50%;
 }
 
 .botoes .botao img{
